# tec-lab

./: .gitignore  LICENSE  Lanski_playground.ipynb  README.md  pyproject.toml  requirements.txt  sem.ipynb  ygg.ipynb
Lab1/: README.md  lab1.csv
Lab14/: chesscad.ipynb  chesscad2.ipynb
Lab4/: README.md  example.ipynb  initial.ipynb
Lab5/: README.md  hatch-parameters.ipynb  impact-hours.ipynb  new-hatch.ipynb
Lab6/: hatch-parameters.ipynb  hatch_template.ipynb  impact-hours.ipynb
Lab7/: culture_tribute1.ipynb  culture_tribute2.ipynb  good_copy.ipynb  hatch_template.ipynb  hatch_template_components.ipynb  hatch_template_components2.ipynb  oops.ipynb
Lab8/: app.py
lab1/: Lanski_playground.ipynb  ygg.ipynb
lab13/: chesscad.ipynb
