[tool.poetry]
name = "tec-lab"
version = "0.1.0"
description = "https://forum.tecommons.org/t/tec-labs-production-team-funding/201"
authors = ["Shawn Anderson <shawnltf@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cadCAD = "^0.4.23"
panel = "^0.10.2"
holoviews = "^1.14.1"
pandas = "^1.2.0"
jupyterlab = "^3.0.4"
ipython = "^7.19.0"
hvplot = "^0.7.0"
openpyxl = "^3.0.5"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
